--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "cesar contreras",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.14.186",
     "typescript": "^4.8.4"
   },
   "dependencies": {
